--- a/comment-admin/index.html
+++ b/comment-admin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="GB2312">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
     <title>comment-admin</title>
